k8s/board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-service
  template:
    metadata:
      labels:
        app: board-service
    spec:
      containers:
        - name: board-service
          image: board-service:v2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
